practice/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  template:
      metadata:
        name: nginx-container
        labels:
          app: nginx
      spec:
        containers:
          - image:  nginx
            name:  nginx-container
  selector:
    matchLabels:
      app: nginx
