practice/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-master
  labels:
    tier: test
spec:
  containers:
  - name: jenkins-master
    image: jenkins/jenkins:lts
    ports:
    - containerPort: 8080
volumeMounts:
- name: jenkins-hom
  mountPath: /var/jenkins_home
  volumes:
    - name: jenkins-home
      emptyDir: {}
