practice/jenkins-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32008
  selector:
    tier: test
