practice/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    svc: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30010
      targetPort: 80
  selector:
    app: nginx
