practice/jenkins-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins-svc
  namespace: test
spec:
  host: xxxx
  port:
    targetPort: 8080
  to:
    kind: Service
    name: jenkins-svc
    weight: 100
  wildcardPolicy: None
